# xiangzi-md

./: .gitattributes  .gitignore  .prettierignore  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  RENDERING_SHOWCASE.html  design-qa.md  eslint.config.js  index.html  knip.json  markdown_all_formats_test.md  mise.toml  package-lock.json  package.json  perf.html  playwright.config.ts  quality-audit.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-gitee-attachments.yml  publish-gitee-release.yml  reconcile-gitee.yml  release.yml  sync-gitee.yml
audit/: CODE_AUDIT_V1.2.1.md  ENGINEERING_UX_AUDIT.md  MAIN_UI_AUDIT_2026-07-05.md
docs/: ARCHITECTURE.md  BASELINE.md  BUGS_FOUND_USER_GUIDE_TEST.md  ENGINEERING_CONSTRAINTS.md  FEATURE_PARITY.md  MIGRATION_PLAN.md  QA_MACOS_2026-06-27.md  RELEASE_PROCESS.md  RENDERING_SHOWCASE.md  UPDATE_SIGNING.md  USER_GUIDE.md
docs/adr/: 0001-export-parity-spike.md
e2e/: code-block-select-all.spec.ts  helpers.ts  inline-html-backspace.spec.ts  line-leading-selection.spec.ts  native-code-caret.spec.ts  portable-clipboard.spec.ts  tsconfig.json
public/: perf-test-1mb.md
sample-notes/: 欢迎.md
scripts/: check-bundle-budget.mjs  make-icon.mjs  prune-gitee-attachments.sh
src/: App.css  App.tsx  main.tsx  perfMain.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  assets.rs  attachment.rs  drafts.rs  mod.rs  pandoc.rs  raster_export.rs  search.rs  settings.rs  updates.rs  workspace.rs
src-tauri/src/domain/: error.rs  mod.rs  models.rs  safe_name.rs
src-tauri/src/infrastructure/: attachment.rs  drafts.rs  lifecycle.rs  menu.rs  mod.rs  protocol.rs  release_sources.rs  remote_image.rs  search.rs  settings.rs  settings_model.rs  settings_tests.rs  settings_validation.rs  workspace.rs  workspace_mutations.rs  workspace_write.rs
src/components/: CommandPalette.tsx  ContextMenu.test.ts  ContextMenu.tsx  DraftRecoveryDialog.tsx  Editor.tsx  EditorToolbar.tsx  ExportCompleteDialog.tsx  ExportProgressToast.tsx  ExternalChangeBanner.tsx  ExternalChangeDialog.tsx  ExternalReloadToast.tsx  FileTree.tsx  FindBar.tsx  InputDialog.tsx  Lightbox.test.ts  Lightbox.tsx  Outline.tsx  SearchPanel.tsx  SelectionToolbar.tsx  Settings.tsx  Shortcuts.tsx  Sidebar.tsx  SidebarHeader.tsx  SourceEditor.tsx  StatusBar.tsx  TabBar.tsx  TableGridPicker.tsx  TableZoomModal.tsx  TextColorPalette.tsx  TextEditor.tsx  TitleBar.tsx  TitleBarMenu.tsx  UnsavedChangesDialog.tsx  UpdateNotice.tsx  VirtualizedEditor.tsx  Welcome.tsx  floatingPanelPosition.ts
src/hooks/: useAppCommands.ts  useAppShortcuts.test.ts  useAppShortcuts.ts  useDraftRecovery.ts  useEditorContextMenu.tsx  useExportActions.ts  useExternalFileWatcher.ts  useFileOps.ts  useFloatingPanelPosition.ts  useNativeIntegration.ts  useNow.ts  useSettings.ts  useTreeOps.ts  useUpdater.ts
src/lib/: asset.test.ts  asset.ts  asyncPool.test.ts  asyncPool.ts  backgroundImage.test.ts  backgroundImage.ts  backgroundImageLayers.test.ts  codeHighlight.ts  codeSyntaxPalette.test.ts  codeTheme.ts  (+114 more)
(+176 files in other folders)
